--- a/udagram-frontend/Dockerfile
+++ b/udagram-frontend/Dockerfile
@@ -20,4 +20,4 @@ COPY . .
 FROM nginx:alpine
 
 #COPY www /usr/share/nginx/html
-COPY --from=ionic  /usr/src/app/www /usr/share/nginx/html
+#COPY --from=ionic  /usr/src/app/www /usr/share/nginx/html
