--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,7 @@ language: minimal
 services: docker
 env:
   - DOCKER_COMPOSE_VERSION=1.23.2
+  - DOCKER_USERNAME=siungocno1
 before_install:
   - docker -v && docker-compose -v
   - sudo rm /usr/local/bin/docker-compose
@@ -14,5 +15,5 @@ before_install:
 
 install:
   - docker-compose -f udagram-deployment/docker-compose-build.yaml build --parallel
-  - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
+  - docker login -u $DOCKER_USERNAME
   - docker-compose -f udagram-deployment/docker-compose-build.yaml push
