--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,6 @@ before_install:
   - sudo mv ./kubectl /usr/local/bin/kubectl
 
 install:
-  - docker-compose -f udagram-deployment/docker-compose-build.yaml build --parallel
-  - docker login -u $DOCKER_USERNAME
-  - docker-compose -f udagram-deployment/docker-compose-build.yaml push
+  # - docker-compose -f udagram-deployment/docker-compose-build.yaml build --parallel
+  # - docker login -u $DOCKER_USERNAME
+  # - docker-compose -f udagram-deployment/docker-compose-build.yaml push
