--- a/udagram-frontend/Dockerfile
+++ b/udagram-frontend/Dockerfile
@@ -15,9 +15,9 @@ RUN npm install
 COPY . .
 
 # Build app
-#RUN ionic build
+RUN ionic build
 
 FROM nginx:alpine
 
 #COPY www /usr/share/nginx/html
-#COPY --from=ionic  /usr/src/app/www /usr/share/nginx/html
+COPY --from=ionic  /usr/src/app/www /usr/share/nginx/html
